--- a/src/App.css
+++ b/src/App.css
@@ -107,4 +107,24 @@ h4{
   margin-top:10px;
 }
 
+.shadow{
+  box-shadow: 0 0 20px 0 rgb(112 121 138/18%);
+}
+
+
+.padding{
+  padding: 80px 0;
+}
+
+.grid3{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  grid-gap:30px;
+}
+
+img{
+  width:100%;
+  height:100%;
+}
+
 
