--- a/src/components/Home/location/Location.css
+++ b/src/components/Home/location/Location.css
@@ -42,3 +42,14 @@
     margin-right:20px;
     opacity: 0.8;
 }
+
+
+@media screen and (max-width:800px){
+    .location .overlay::after{
+        width:280px;
+        height:170px;
+    }
+}
+
+
+
