--- a/src/App.css
+++ b/src/App.css
@@ -132,10 +132,30 @@ img{
   font-size:20px;
 }
 
+.btn5{
+ border-radius:50px;
+ padding:20px 40px;
+ color:#27ae60;
+ font-size: 20px;
+ font-weight:400;
+ border:5px solid #27ae601f;
+ background:#fff;
+}
 
 
 .grid4{
   display:grid;
   grid-template-columns:repeat(4,1fr);
   grid-gap:30px;
+}
+
+
+.btn4{
+  background-color:#000;
+  color:#fff;
+}
+
+.team ul{
+  display:inline-block;
+  margin-top:10px;
 }
